syntax = "proto3";

option java_multiple_files = true;
option go_package = ".;api_v2";

package v2;

import "google/api/annotations.proto";

import "common.proto";

service ServiceA {
    rpc Ping (v2.MessagePing) returns (v2.MessagePong) {
        option (google.api.http) = {
            get: "/v2/ping/{timestamp}"
        };
    }

    rpc Post (v2.MessagePing) returns (v2.MessagePong) {
        option (google.api.http) = {
            post: "/v2/post",
            // MessagePing sẽ dưới dạng chuỗi Json khi gửi Request (vd: '{"timestamp":70000}')
            body: "*"
        };
    }
}